ArgoCD/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata:
  name: argocd
  namespace: devops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    service.alpha.kubernetes.io/app-protocols: '{"https":"HTTPS"}'
spec:
  tls:
    - hosts:
        - argo.metalcloud.cl
      secretName: argo-secret-tls
  rules:
    - host: argo.metalcloud.cl
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: 443
